# fabrykus

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini  vcpkg.json
src/: example.hpp  main.cpp
src/Internal/: NodeEditorIO.cpp  nodeEditorIO.cpp  nodeEditorIO.hpp
src/NodeController/: nodeEditor.cpp  nodeEditor.hpp
src/Nodes/: distributorNode.cpp  distributorNode.hpp  factoryNode.hpp  ingredientNode.cpp  ingredientNode.hpp  ingridientNode.cpp  ingridientNode.hpp  mergerNode.cpp  mergerNode.hpp  productNode.cpp  productNode.hpp  simpleMachineNode.cpp  simpleMachineNode.hpp  simpleMahcineNode.cpp  simpleMahcineNode.hpp  simpleNode.cpp  simpleNode.hpp  splitterNode.cpp  splitterNode.hpp  terminalNode.cpp  terminalNode.hpp
src/Ui/: graphInspector.cpp  graphInspector.hpp  menuBuilder.cpp  menuBuilder.hpp  nodeEditor.cpp  nodeEditor.hpp  nodeInspector.cpp  nodeInspector.hpp
src/Util/: digraph.cpp  digraph.hpp  graphNode.hpp  ingredient.hpp  inspectorConfig.hpp  isolatedGraph.cpp  isolatedGraph.hpp  nodeFactory.hpp  nodeTypes.hpp  savedLink.hpp
